[package]

name = "simple-cgi"
version = "0.0.4"
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "A really simple SCGI server library implementation"
homepage = "https://github.com/kstep/rust-scgi"
repository = "https://github.com/kstep/rust-scgi.git"
license = "MIT"

[dependencies]
url = "*"
